@@ -78,7 +78,7 @@ class Preparer {
                 NodeList activeHosts = allNodesAndHosts.nodes().state(Node.State.active).parents().nodeType(requestedNodes.type().hostType());
                 accepted = accepted.stream()
                                    .filter(node -> node.parentHostname().isEmpty() || activeHosts.parentOf(node).isPresent())
-                                   .collect(Collectors.toList());
+                                   .toList();
             }
 
             replace(acceptedNodes, accepted);
